--- a/frames/gamecatalog/hives/listing/actions/home/static/css/home.css
+++ b/frames/gamecatalog/hives/listing/actions/home/static/css/home.css
@@ -15,8 +15,15 @@
     margin-bottom: 0.125em;
     line-height: 100px;
     font-family: 'Roboto Condensed', Helvetica Neue, Arial, sans-serif;
-    text-shadow: 0 0 10px #000000;
+    text-shadow: 2px 2px 4px #000000;
 
+}
+
+.intro-block {
+    padding: 2.5em;
+    background-color: white;
+    -webkit-box-shadow: 15px 8px 80px 10px rgba(0,0,0,0.25);
+    box-shadow: 15px 8px 80px 10px rgba(0,0,0,0.25);
 }
 
 .footer {
@@ -91,7 +98,7 @@
     padding-left: 20px;
     font-family: 'Roboto Condensed', Helvetica Neue, Arial, sans-serif;
     color: white;
-    text-shadow: 8px 4px 10px #000000;
+    text-shadow: 8px 4px 5px #000000;
 }
 
 .view-switch-button h2 {
@@ -248,6 +255,13 @@
     line-height: 150px;
 }
 
+.intro-prompt {
+    font-size: 150%;
+    font-family: 'Roboto Condensed', Helvetica Neue, Arial, sans-serif;
+    font-weight: 300;
+    padding-left: 3em;
+}
+
 .platform-icon {
     font-size: 80%;
     background-color: #0081c2;
@@ -278,12 +292,13 @@
 }
 
 .game-header {
-    background-color: #df8505;
+    background-color: #ab3f23;
 }
 
 .game-header-label {
     color: white;
     font-weight: bold;
+    text-shadow: 2px 1px 2px #000000;
 }
 
 .game-header-label.name {
