adding github link

--- a/frames/gamecatalog/hives/listing/actions/home/static/template/intro.html
+++ b/frames/gamecatalog/hives/listing/actions/home/static/template/intro.html
@@ -36,6 +36,7 @@
                 <img src="/img/home/GameGalaxy.png"/>
             </p>
 
+            <p>View source at <a href="https://github.com/bingomanatee/gamegalaxy" target="_blank">Github</a></p>
 
             <h2>Viewing the games in a timeline</h2>
 
